projects/203-dockerization-bookstore-api-on-python-flask-mysql/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  This Cloudformation Template creates a Docker machine on EC2 Instance and
  deploys Bookstore Web API, Docker Machine will run on Amazon Linux 2
  EC2 Instance with custom security group allowing HTTP (Port 80)
  and SSH (Port 22) connections from anywhere.

Parameters:
  WebServerVPC:
    Description: This is VPC Id of my account
    Type: AWS::EC2::VPC::Id
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connections.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair


Resources:
  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP and SSH #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: web-server-sec-group
      VpcId: !Ref WebServerVPC
  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:   
      ImageId: ami-09d95fab7fff3776c
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds: 
        - !Ref WebServerSecGroup
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}

      UserData: 
        Fn::Base64: 
          !Sub |
            #! /bin/bash

            yum update -y
            amazon-linux-extras install docker -y
            systemctl start docker
            systemctl enable docker
            usermod -a -G docker ec2-user
            # install docker-compose
            curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" \
            -o /usr/local/bin/docker-compose
            chmod +x /usr/local/bin/docker-compose
            cd /home/ec2-user
            # TOKEN="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
            FOLDER="https://raw.githubusercontent.com/enes789/clarusway-devops/main/projects/203-dockerization-bookstore-api-on-python-flask-mysql"
            wget $FOLDER/Dockerfile
            wget $FOLDER/docker-compose.yml
            wget $FOLDER/app.py
            wget $FOLDER/requirements.txt
            docker build -t enes/bookstore-api:latest .
            docker-compose up -d

Outputs:
  WebsiteURL:
    Description: URL for newly created stack
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerInstance.PublicDnsName
